# promptblocks

./: LICENSE  README.md  pyproject.toml
examples/: basic.py
src/promptblocks/: __init__.py  example.py  prompt.py  renderer.py  rule.py  section.py  step.py
