[tool.poetry]
name = "promptblocks"
version = "0.1.0"
description = "Build large, structured LLM prompts the same way you build data models."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "promptblocks", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]